--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "server": "webpack-dev-server --open",
-    "product": "webpack -p"
+    "dev": "webpack --progress --colors --config webpack.dev.js",
+    "prod": "webpack --progress --colors --config webpack.prod.js",
+    "watch": "webpack --watch --config webpack.dev.js",
+    "server": "webpack-dev-server --open --config webpack.dev.js",
+    "product": "webpack -p --config webpack.dev.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +19,11 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.18.2",
+    "typescript": "^2.4.2",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.7.1",
+    "webpack-merge": "^4.1.0"
   }
 }
