--- a/package.json
+++ b/package.json
@@ -8,22 +8,32 @@
     "prod": "webpack --progress --colors --config webpack.prod.js",
     "watch": "webpack --watch --config webpack.dev.js",
     "server": "webpack-dev-server --open --config webpack.dev.js",
-    "product": "webpack -p --config webpack.dev.js"
+    "product": "webpack -p --config webpack.dev.js",
+    "babel": "webpack --progress --colors --config webpack.babel.js",
+    "ts" : "webpack --progress --colors --config webpack.ts.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
+    "ts-loader": "^2.3.7",
     "typescript": "^2.4.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1",
     "webpack-merge": "^4.1.0"
+  },
+  "dependencies": {
+    "babel-plugin-transform-runtime": "^6.23.0"
   }
 }
