--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "server": "webpack-dev-server --open --config webpack.dev.js",
     "product": "webpack -p --config webpack.dev.js",
     "babel": "webpack --progress --colors --config webpack.babel.js",
-    "ts" : "webpack --progress --colors --config webpack.ts.js"
+    "ts": "webpack --progress --colors --config webpack.ts.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,8 @@
     "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.3.7",
